@@ -28,6 +28,7 @@
 - Change: Refactored the code generation.
 - Change: Refactored the routing.
 - Change: "Called from" is always expanded in the smokygrey skin.
+- Change: The connector constants are now strings.
 - Bugfix: The search does now respects the selected tab.
 
 3.2.4
